<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/colorPrimary"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="220dp"
        android:layout_marginBottom="170dp"
        android:background="#394DFF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Tesla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/Tesla"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#020202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_your" />

    <TextView
        android:id="@+id/BMW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/BMW"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#020202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tesla" />

    <TextView
        android:id="@+id/Audi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/Audi"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#020202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BMW" />

    <RadioGroup
        android:layout_width="50dp"
        android:layout_height="151dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/TeslaRadioButton"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:buttonTint="#909DE9"
            android:checked="true" />

        <RadioButton
            android:id="@+id/BMWRadioButton"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:buttonTint="#909DE9" />

        <RadioButton
            android:id="@+id/AudiRadioButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:buttonTint="#909DE9" />
    </RadioGroup>

    <TextView
        android:id="@+id/select_your"
        android:layout_width="328dp"
        android:layout_height="35dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="172dp"
        android:text="@string/selectVehicle"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#060606"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/proceedToMaps"
        android:layout_width="277dp"
        android:layout_height="45dp"
        android:layout_marginStart="69dp"
        android:layout_marginBottom="80dp"
        android:background="#909DE9"
        android:text="@string/ProceedToMaps"
        android:textColor="#020202"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="373dp"
        android:layout_height="143dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:alpha="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/custom2" />

    <TextView
        android:id="@+id/HomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="95dp"
        android:rotation="-40"
        android:text="@string/Title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#B9B9B9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>